# BTC-NSCRIBED-

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.emergent/: emergent.yml
backend/: art.py  requirements.txt  server.py
backend/tests/: backend_test.py  test_discovery_likes.py
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js  auth.js
frontend/src/components/: Access.jsx  AuthCallback.jsx  Collection.jsx  DiscoverTile.jsx  EditProfile.jsx  Footer.jsx  Gate.jsx  Header.jsx  Home.jsx  LikeButton.jsx  Profile.jsx
frontend/src/constants/testIds/: home.js
frontend/src/lib/: art.js  icons.jsx  marketplace.js
memory/: PRD.md
scripts/: vercel-build.sh
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
